--- a/css/ex_product_section_style.css
+++ b/css/ex_product_section_style.css
@@ -230,6 +230,7 @@ div.fg{
     display: flex;
     flex-direction: column;
     gap: 15px;
+    margin:auto;
     margin-top: 30px;
     padding: 20px;
     background-color: rgba(30, 30, 30, 0.8);
