--- a/css/nav_style.css
+++ b/css/nav_style.css
@@ -1,12 +1,26 @@
+body, html {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+    padding-top: 80px;
+}
 
 .main-navigation {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
     background-color: #121212;
     color: #ffffff;
     display: flex;
     height: 60px;
-    margin-top: 0;
     align-items: center;
-    justify-content: space-between; 
+    padding: 0 20px;
+    box-sizing: border-box;
     font-family: "Honk", system-ui;
     font-optical-sizing: auto;
     font-weight: 400;
@@ -15,24 +29,34 @@
     font-variation-settings:
       "MORF" 15,
       "SHLN" 50;
-
 }
-
 
 .brand-area {
     background-color: rgb(41, 41, 41);
-    padding: 0px;
-    margin-right: 0; 
+    padding: 0;
+    margin-right: 20px;
     display: flex;
     align-items: center;
+    flex-shrink: 0;
+}
+
+.brand-img-link {
+    display: flex;
+    align-items: center;
+    height: 100%;
 }
 
 .brand-img {
     position: absolute;
-    top:-100px;
-    width: 350px;
-    border-radius: 40px;
+    width: 20%;
+    height: auto;
 }
+
+.nav-offer-container {
+    left:25%;
+    margin-right: 20px;
+}
+
 .nav-links {
     height:100%;
     list-style: none;
@@ -40,19 +64,19 @@
     margin-left: auto;
     display: flex;
     flex-direction: row;
-    align-items: center; 
+    align-items: center;
+    margin-right: 20px;
+    flex-shrink: 0;
 }
 
 .a-container {
     height: 160px;
     overflow: hidden;
     position: relative;
-    margin-right: 0;
 }
 
 .nav-link {
     width: 100px;
-    margin: 10px 15px 10px; 
     display: block;
     padding: 15px 25px 10px;
     border-radius: 15px;
@@ -62,41 +86,45 @@
     text-transform: uppercase;
     overflow: hidden;
     position: relative;
+    text-align: center;
 }
+
 .nav-offer-link {
-    width: 150px;
-    margin-right: 150px;
+    min-width: 150px;
 }
+
 .nav-link span {
-    display: block; 
-    transition: transform 0.4s ease-in-out; 
+    display: block;
+    transition: transform 0.4s ease-in-out;
     width: 100%;
-    transform: translateY(100%);
+    transform: translateY(100%) translateX(6%);
+    white-space: nowrap;
 }
+
 .nav-link span:last-of-type {
     position: absolute;
-    top: 100%; 
-    left: 0; 
-    padding: inherit; 
+    top: 100%;
+    left: 0;
+    padding: inherit;
+    transform:translateX(-13%)
 }
 
 .nav-link:hover span:first-of-type,
 .nav-link.active span:first-of-type {
-    transform: translateY(-110%); 
+    transform: translateY(-100%) translateX(6%);
 }
 
 .nav-link:hover span:last-of-type,
 .nav-link.active span:last-of-type {
-    transform: translateY(-100%); 
+    transform: translateY(-100%) translateX(-13%);
 }
-
 
 .nav-link:hover,
 .nav-link.active {
-    background-color: rgba(183,0,255, 0.6); /* #cc5200; */
+    background-color: rgba(183,0,255, 0.6);
     border-radius: 15px;
     box-shadow: rgba(183, 0, 255, 0.2) 0px 12px 28px 0px, rgba(183, 0, 255, 0.1) 0px 2px 4px 0px, rgba(183, 0, 255, 0.05) 0px 0px 0px 1px inset;
-    color:rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
 }
 
 .lang-button-container {
@@ -109,10 +137,15 @@
     border-left: 2px dashed #858585;
     transform: skewX(-25deg);
     margin-right: 30px;
+    display: flex;
+    align-items: center;
+    flex-shrink: 0;
 }
+
 .fa-globe {
     margin-right: 10px;
 }
+
 .lang-button {
     transform: translateY(-8px);
     display: block;
@@ -124,4 +157,3 @@
     transform: skewX(25deg);
     padding-left: 25px;
 }
-
