--- a/css/nav_style.css
+++ b/css/nav_style.css
@@ -1,3 +1,4 @@
+
 body, html {
     margin: 0;
     padding: 0;
@@ -5,23 +6,26 @@ body, html {
 
 body {
     font-family: 'Roboto', sans-serif;
-    padding-top: 80px;
+    padding-top: 80px; 
 }
 
 .main-navigation {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1000;
-    background-color: #121212;
-    color: #ffffff;
-    display: flex;
-    height: 60px;
-    align-items: center;
-    padding: 0 20px;
-    box-sizing: border-box;
-    font-family: "Honk", system-ui;
+    position: fixed; 
+    top: 0; 
+    left: 0; 
+    width: 100%; 
+    z-index: 1000; 
+
+    background-color: #121212; 
+    color: #ffffff; 
+    display: flex; 
+    height: 60px; 
+    align-items: center; 
+
+    padding: 0 20px; 
+    box-sizing: border-box; 
+
+    font-family: "Honk", system-ui; 
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
@@ -33,85 +37,91 @@ body {
 
 .brand-area {
     background-color: rgb(41, 41, 41);
-    padding: 0;
-    margin-right: 20px;
-    display: flex;
-    align-items: center;
-    flex-shrink: 0;
+    padding: 0; 
+    margin-right: 20px; 
+    display: flex; 
+    align-items: center; 
+    flex-shrink: 0; 
 }
 
 .brand-img-link {
-    display: flex;
+    display: flex; 
     align-items: center;
     height: 100%;
 }
 
 .brand-img {
-    position: absolute;
+    position: absolute; 
     width: 20%;
     height: auto;
 }
 
 .nav-offer-container {
     left:25%;
-    margin-right: 20px;
+    margin-right: 20px;  
 }
 
 .nav-links {
     height:100%;
     list-style: none;
     padding: 0;
-    margin-left: auto;
+    margin-left: auto; 
     display: flex;
     flex-direction: row;
-    align-items: center;
-    margin-right: 20px;
-    flex-shrink: 0;
+    align-items: center; 
+    margin-right: 20px; 
+    flex-shrink: 0; 
 }
 
 .a-container {
-    height: 160px;
-    overflow: hidden;
-    position: relative;
+    height: 160px; 
+    overflow: hidden; 
+    position: relative; 
+
 }
 
 .nav-link {
-    width: 100px;
+    width: 100px; 
     display: block;
-    padding: 15px 25px 10px;
-    border-radius: 15px;
+    padding: 15px 25px 10px; 
+    border-radius: 15px; 
     transition: background-color 0.2s ease-in-out;
     color: #ffffff;
     text-decoration: none;
     text-transform: uppercase;
-    overflow: hidden;
-    position: relative;
-    text-align: center;
+    overflow: hidden; 
+    position: relative; 
+    text-align: center; 
 }
 
 .nav-offer-link {
-    min-width: 150px;
+    min-width: 150px; 
+
 }
+
 
 .nav-link span {
     display: block;
     transition: transform 0.4s ease-in-out;
     width: 100%;
+
     transform: translateY(100%) translateX(6%);
     white-space: nowrap;
 }
+
 
 .nav-link span:last-of-type {
     position: absolute;
     top: 100%;
     left: 0;
-    padding: inherit;
+    padding: inherit; 
     transform:translateX(-13%)
 }
 
 .nav-link:hover span:first-of-type,
 .nav-link.active span:first-of-type {
-    transform: translateY(-100%) translateX(6%);
+
+    transform: translateY(-100%) translateX(6%); 
 }
 
 .nav-link:hover span:last-of-type,
@@ -121,25 +131,25 @@ body {
 
 .nav-link:hover,
 .nav-link.active {
-    background-color: rgba(183,0,255, 0.6);
-    border-radius: 15px;
-    box-shadow: rgba(183, 0, 255, 0.2) 0px 12px 28px 0px, rgba(183, 0, 255, 0.1) 0px 2px 4px 0px, rgba(183, 0, 255, 0.05) 0px 0px 0px 1px inset;
-    color: rgb(255, 255, 255);
+    background-color: rgba(183,0,255, 0.6); 
+    border-radius: 15px; 
+    box-shadow: rgba(183, 0, 255, 0.2) 0px 12px 28px 0px, rgba(183, 0, 255, 0.1) 0px 2px 4px 0px, rgba(183, 0, 255, 0.05) 0px 0px 0px 1px inset; /* Your box-shadow */
+    color: rgb(255, 255, 255); 
 }
 
 .lang-button-container {
-    font-family: "Teko", sans-serif;
-    font-size: 25px;
-    font-weight: 400;
+    font-family: "Teko", sans-serif; 
+    font-size: 25px; 
+    font-weight: 400; 
     font-optical-sizing: auto;
     font-style: normal;
-    height:100%;
-    border-left: 2px dashed #858585;
-    transform: skewX(-25deg);
-    margin-right: 30px;
-    display: flex;
-    align-items: center;
-    flex-shrink: 0;
+    height:100%; 
+    border-left: 2px dashed #858585; 
+    transform: skewX(-25deg); 
+    margin-right: 30px; 
+    display: flex; 
+    align-items: center; 
+    flex-shrink: 0; 
 }
 
 .fa-globe {
@@ -147,13 +157,13 @@ body {
 }
 
 .lang-button {
-    transform: translateY(-8px);
+    transform: translateY(-8px); 
     display: block;
-    padding: 17px 35px 10px;
+    padding: 17px 35px 10px; 
     transition: background-color 0.4s ease-in-out;
     color: #ffffff;
     text-decoration: none;
     text-transform: uppercase;
-    transform: skewX(25deg);
-    padding-left: 25px;
+    transform: skewX(25deg); 
+    padding-left: 25px; 
 }
