--- a/css/ex_product_section_style.css
+++ b/css/ex_product_section_style.css
@@ -195,9 +195,9 @@ div.fg{
     line-height: 1.6;
 }
 
-.album-cover-image {
+.track-promo {
     display: block;
-    max-width: 100%;
+    width: 100%;
     height: auto;
     border-radius: 8px;
     box-shadow: 0 4px 15px rgba(0,0,0,0.5);
@@ -226,11 +226,11 @@ div.fg{
 }
 
 .code-input-form {
-    width:30%;
+    width: 30%;
     display: flex;
     flex-direction: column;
     gap: 15px;
-    margin:auto;
+    margin: auto;
     margin-top: 30px;
     padding: 20px;
     background-color: rgba(30, 30, 30, 0.8);
@@ -303,6 +303,10 @@ div.fg{
     margin-bottom: 20px;
 }
 
+.merch-wrapper {
+    display: flex;
+    flex-direction: row;
+}
 .merch-photo {
     display: block;
     max-width: 300px;
@@ -345,7 +349,7 @@ div.fg{
 }
 
 .map-container {
-    width: 32%;
+    width: 900px;
     margin: 0 auto 20px auto;
     border: 2px solid #ff00ff;
     border-radius: 8px;
